ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
spec:
  rules:
  - host: ecs.k3s.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ecsdemo-frontend
            port:
              number: 8008
  - host: hello.k3s.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: helloweb-default
            port:
              number: 8009
